--- a/SourceCrawler/SourceCrawler.csproj
+++ b/SourceCrawler/SourceCrawler.csproj
@@ -98,6 +98,7 @@
     </Compile>
     <Compile Include="Enums.cs" />
     <Compile Include="ExtensionMethods.cs" />
+    <Compile Include="HistoryItem.cs" />
     <Compile Include="HistoryPopup.cs">
       <SubType>Form</SubType>
     </Compile>
